added fusioncharts to project for maps

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
+	<script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
   <!--jQuery-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <!-- Popper.js-->
@@ -15,7 +17,69 @@
 
   <!--Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+  <script type="text/javascript">
+		FusionCharts.ready(function(){
+			var chartObj = new FusionCharts({
+    type: 'maps/usa',
+    renderAt: 'chart-container',
+    width: '600',
+    height: '400',
+    dataFormat: 'json',
+    dataSource: {
+        "chart": {
+            "caption": "Global Population",
+            "theme": "fusion",
+            "formatNumberScale": "0",
+            "numberSuffix": "M"
+        },
+        "colorrange": {
+            "color": [{
+                "minvalue": "0",
+                "maxvalue": "100",
+                "code": "#D0DFA3",
+                "displayValue": "< 100M"
+            }, {
+                "minvalue": "100",
+                "maxvalue": "500",
+                "code": "#B0BF92",
+                "displayValue": "100-500M"
+            }, {
+                "minvalue": "500",
+                "maxvalue": "1000",
+                "code": "#91AF64",
+                "displayValue": "500M-1B"
+            }, {
+                "minvalue": "1000",
+                "maxvalue": "5000",
+                "code": "#A9FF8D",
+                "displayValue": "> 1B"
+            }]
+        },
+        "data": [{
+            "id": "NA",
+            "value": "515"
+        }, {
+            "id": "SA",
+            "value": "373"
+        }, {
+            "id": "AS",
+            "value": "3875"
+        }, {
+            "id": "EU",
+            "value": "727"
+        }, {
+            "id": "AF",
+            "value": "885"
+        }, {
+            "id": "AU",
+            "value": "32"
+        }]
+    }
+}
+);
+			chartObj.render();
+		});
+	</script>
 </head>
 <body>
   <app-root></app-root>
