changes by Matt Mrazik

--- a/src/index.html
+++ b/src/index.html
@@ -94,24 +94,18 @@
           "colorrange": {
             "color": [{
               "minvalue": "0",
+              "code": "#ffae00",
+            }, {
+              "minvalue": "1",
               "maxvalue": "100",
-              "code": "#D0DFA3",
-              "displayValue": "< 100"
+              "code": "#ffae00",
             }, {
-              "minvalue": "100",
-              "maxvalue": "500",
-              "code": "#B0BF92",
-              "displayValue": "100-500"
+              "minvalue": "101",
+              "maxvalue": "10000",
+              "code": "#ff9500",
             }, {
-              "minvalue": "500",
-              "maxvalue": "1000",
-              "code": "#91AF64",
-              "displayValue": "500-1000"
-            }, {
-              "minvalue": "1000",
-              "maxvalue": "10000000",
-              "code": "#A9FF8D",
-              "displayValue": "> 1000"
+              "maxvalue": "5000000",
+              "code": "#ff0000",
             }]
           },
           "data": [
